add a bunch of animals, add day/night visuals