@@ -1,34 +1,32 @@
 import java.util.List;
 
 /**
- * A simple model of a fox.
- * Foxes age, move, eat rabbits, and die.
+ * A simple model of a shark.
+ * Foxes age, move, eat clownfishs, and die.
  * 
  * @author David J. Barnes and Michael Kölling
  * @version 7.1
  */
 public class Shark extends GenderedAnimal
 {
-    // Characteristics shared by all foxes (class variables).
-    // The age at which a fox can start to breed.
+    // Characteristics shared by all sharks (class variables).
+    // The age at which a shark can start to breed.
     private static final int BREEDING_AGE = 15;
-    // The age to which a fox can live.
+    // The age to which a shark can live.
     private static final int MAX_AGE = 1500;
-    // The likelihood of a fox breeding.
+    // The likelihood of a shark breeding.
     private static final double BREEDING_PROBABILITY = 0.08;
     // The maximum number of births.
     private static final int MAX_LITTER_SIZE = 2;
-
-    private static final int RABBIT_FOOD_VALUE = 9;
 
     
     // Individual characteristics (instance fields).
 
     /**
-     * Create a fox. A fox can be created as a new born (age zero
+     * Create a shark. A shark can be created as a newborn (age zero
      * and not hungry) or with a random age and food level.
      * 
-     * @param randomAge If true, the fox will have random age and hunger level.
+     * @param randomAge If true, the shark will have random age and hunger level.
      * @param location The location within the field.
      */
     public Shark(Boolean randomAge, Location location)
@@ -39,12 +37,12 @@ public class Shark extends GenderedAnimal
         breedingAge = BREEDING_AGE;
         breedingProbability = BREEDING_PROBABILITY;
         maxLitterSize = MAX_LITTER_SIZE;
-        foodLevel = rand.nextInt(RABBIT_FOOD_VALUE);
+        foodLevel = rand.nextInt(30);
     }
     
     /**
-     * This is what the fox does most of the time: it hunts for
-     * rabbits. In the process, it might breed, die of hunger,
+     * This is what the shark does most of the time: it hunts for
+     * clownfishes. In the process, it might breed, die of hunger,
      * or die of old age.
      * @param currentField The field currently occupied.
      * @param nextFieldState The updated field.
@@ -62,7 +60,7 @@ public class Shark extends GenderedAnimal
             Location nextLocation = findFood(currentField);
             if(nextLocation == null && ! freeLocations.isEmpty()) {
                 // No food found - try to move to a free location.
-                nextLocation = freeLocations.remove(0);
+                nextLocation = freeLocations.removeFirst();
             }
             // See if it was possible to move.
             if(nextLocation != null) {
